engine-net-2/examples/Errors/ProcedureMethodUnknown.grs
new graph "Rules.grg"

exec { n:N=null; (d:double)=n.pp() }

quit
